@@ -5553,12 +5553,18 @@ list_icon_data_func (GtkTreeViewColumn *tree_column,
 						  &child_iter,
 						  iter);
   path = _gtk_file_system_model_get_path (impl->browse_files_model, &child_iter);
-  if (!path)
-    return;
 
-  /* FIXME: NULL GError */
-  pixbuf = gtk_file_system_render_icon (impl->file_system, path, GTK_WIDGET (impl),
-					impl->icon_size, NULL);
+  if (path)
+    {
+      /* FIXME: NULL GError */
+      pixbuf = gtk_file_system_render_icon (impl->file_system, path, GTK_WIDGET (impl),
+					    impl->icon_size, NULL);
+    }
+  else
+    {
+      /* We are on the editable row */
+      pixbuf = NULL;
+    }
 
   if (info && (impl->action == GTK_FILE_CHOOSER_ACTION_SELECT_FOLDER ||
 	       impl->action == GTK_FILE_CHOOSER_ACTION_CREATE_FOLDER))
